--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,5 +1,5 @@
 .table {
-  @apply relative mt-24 grid grid-cols-3 grid-flow-row-dense w-1/2 m-auto;
+  @apply relative mt-24 grid grid-cols-3 grid-flow-row-dense w-1/2 m-auto pb-10;
 
   @media screen and (max-width: 1100px) {
     &,
@@ -12,7 +12,7 @@
     @apply absolute top-[1px] -translate-y-full flex w-[100%];
 
     & > * {
-      @apply border-black dark:border-neutral-200 border-t-2 border-[1px] font-semibold flex justify-center;
+      @apply border-neutral-700 dark:border-neutral-500 border-t-2 border-[1px] font-semibold flex justify-center;
     }
 
     & > :nth-child(1) {
@@ -30,7 +30,7 @@
     @apply col-span-3 row-auto;
 
     & > div {
-      @apply h-full flex items-center justify-center dark:border-neutral-200 border-black border-[1px] border-solid;
+      @apply h-full flex items-center justify-center dark:border-neutral-500 border-neutral-700 border-[1px] border-solid;
     }
 
     .name {
